fixed vertical alignment of dataTables pagination

--- a/public/css/gundert.css
+++ b/public/css/gundert.css
@@ -23,3 +23,7 @@ option {
 .ut-icon--animate-spin {
     font-size: 2rem;
 }
+
+.dataTables_paginate {
+    padding-top: 0px !important;
+}
